--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="./src/assets/qc_logo_dark.svg" />
     <meta name="viewport" />
     <title>Quant Community, IITB</title>
